--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blues-stack-template",
+  "name": "techno-stack-template",
   "private": true,
   "description": "",
   "license": "",
